# src/app/authentication/constants/routes.go
@@ -1,6 +1,7 @@
 package constants
 
 const (
-	SignUpRoute = "/signUp"
-	SignInRoute = "/signIn"
+	SignUpRoute        = "/signUp"
+	SignInRoute        = "/signIn"
+	OTPValidationRoute = "/validateOTP"
 )
